--- a/kie-artifacts/pom.xml
+++ b/kie-artifacts/pom.xml
@@ -106,7 +106,7 @@
               <goal>copy-dependencies</goal>
             </goals>
             <configuration>
-              <outputDirectory>${kie.artifacts.deploy.path}/${timestamp}</outputDirectory>
+              <outputDirectory>${kie.artifacts.deploy.path}</outputDirectory>
               <overWriteReleases>false</overWriteReleases>
               <overWriteSnapshots>true</overWriteSnapshots>
               <overWriteIfNewer>true</overWriteIfNewer>
