--- a/kie-artifacts/pom.xml
+++ b/kie-artifacts/pom.xml
@@ -90,6 +90,27 @@
       <classifier>webc</classifier>
     </dependency>
 
+    <dependency>
+      <groupId>org.dashbuilder</groupId>
+      <artifactId>dashbuilder-distros</artifactId>
+      <type>war</type>
+      <classifier>wildfly8</classifier>
+    </dependency>
+
+    <dependency>
+      <groupId>org.dashbuilder</groupId>
+      <artifactId>dashbuilder-distros</artifactId>
+      <type>war</type>
+      <classifier>eap6_4</classifier>
+    </dependency>
+
+    <dependency>
+      <groupId>org.dashbuilder</groupId>
+      <artifactId>dashbuilder-distros</artifactId>
+      <type>war</type>
+      <classifier>tomcat7</classifier>
+    </dependency>
+
   </dependencies>
 
   <build>
